--- a/package.json
+++ b/package.json
@@ -27,14 +27,15 @@
     "expo-web-browser": "~14.0.2",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-url-polyfill": "^2.0.0",
+    "tailwindcss": "^3.4.17",
+    "react-dom": "18.3.1",
     "react-native-web": "~0.19.13",
-    "tailwindcss": "^3.4.17"
+    "@expo/metro-runtime": "~4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
